[PLAT-216] Fix onboarder alignment and more (#8224)
* touch up css for landing pages and add validation to create project button

* fix alignment within select buttons

* add new campaign info so emails can redirect properly

--- a/website/static/css/registration_landing.css
+++ b/website/static/css/registration_landing.css
@@ -74,13 +74,13 @@ body, html {
 }
 
 @media (max-width: 767px) {
-    .prereg-button {
+    .reg-landing-page-button {
         line-height: 30px;
     }
 }
 
  @media (min-width: 992px) {
-    div[class^='col']:first-of-type .prereg-button {
+    div[class^='col']:first-of-type .reg-landing-page-button {
         line-height: 30px;
     }
 }
